fix(core/menu): fix overflow behavior

--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -21,7 +21,7 @@ $menu-expanded-width: 16rem;
   flex-direction: row;
   position: absolute;
   height: 100%;
-  min-height: 22.75rem;
+  min-height: min-content; //TODO: Ist das wo definiert? 22.87rem
   z-index: var(--theme-z-index-sticky);
   width: auto;
 
@@ -34,10 +34,10 @@ $menu-expanded-width: 16rem;
     pointer-events: all;
 
     -ms-overflow-style: none;
-    scrollbar-width: none;
+    scrollbar-width: inherit;
 
     &::-webkit-scrollbar {
-      display: none;
+      display: inherit;
     }
   }
 
@@ -61,12 +61,12 @@ $menu-expanded-width: 16rem;
     transition: opacity var(--theme-default-time);
   }
   .tabs--shadow-top {
-    top: 0px;
+    top: 0;
     background: linear-gradient(var(--theme-color-shadow-1), transparent);
   }
 
   .tabs--shadow-bottom {
-    bottom: 0px;
+    bottom: 0;
     background: linear-gradient(transparent, var(--theme-color-shadow-1));
   }
 
